# parallel-programming

./: .gitignore  README.md
ex1/: broadcast.c  hello.c  theorie.txt
ex1/doc/: 3a_1.ipe  3c_1.ipe  3c_2.ipe  3c_3.ipe  exercise.tex
ex2/: CMakeLists.txt  benchmark.sh  benchmarklow.sh  main.cpp
ex2/data/: B.txt  dna-A1  dna-A2  dna-A3  dna-B1  dna-B2  dna-B3  input1.txt
ex2/doc/: benchmark_omp.csv  benchmark_sequentiell.csv  exercise.tex  plotStuff.py  plotStuff_seq.py
ex2/inc/: File.h  Match.h  OpenMPAlgorithm.h  OpenMPAlgorithmTasks.h  SequentialAlgorithm.h  SequentialOptimizedAlgorithm.h  SequentialOptimizedAlgorithm2.h  Stopwatch.h  StopwatchNoBoost.h  TestRunner.h  Testable.h
ex2/src/: File.cpp  OpenMPAlgorithm.cpp  OpenMPAlgorithmTasks.cpp  SequentialAlgorithm.cpp  SequentialOptimizedAlgorithm.cpp  SequentialOptimizedAlgorithm2.cpp  TestRunner.cpp
ex3/: Makefile  scan.cl  template.cpp
ex3/doc/: algo.ipe  exercise.tex  le.ipe  recur.ipe  recur2.ipe  recur3.ipe
ex5/: Makefile  fifo.c  qeueu2.c  queue.c
